2010-10-28  JMB  More intuitive import dialog sequence

    The sequence of dialogs when importing a MobileDB or XML file now makes
    more sense; the user is prompted first for the file to import, then for
    the name of the new file to create.

2010-10-27  JMB  Build instructions update, translation files cleanup

    Mentioned the need to prepare the translation files in the compilation
    instructions.  Removed some extraneous empty "location" elements in the
    Qt translation files that were causing Pootle (a translation server I'm in
    the process of setting up) to choke.

2010-08-16  JMB  Note button sizing fix, more info in file properties dialog

    Fixed the width of note field edit buttons representing long text on
    Fremantle.  Added the number of rows in the current filter and the number
    of columns in the current view to the file properties dialog.

2010-08-15  JMB  French translation update, main window code cleanup

    Added a recently received update to the French UI translation.  Moved a lot
    of code for the main window to a separate base class, which has already
    been tested and refined in another project of mine; fixes a minor issue
    with the save changes prompt dialog.

2010-08-14  JMB  Condition editor enum enhancement, clear recent files button

    If you switch from one column to another one of the same enum type in the
    condition editor, the selected value is no longer reset to the first one
    in the list (this was really bothering me in a transactions database where
    the "To" and "From" columns use the same enum).
    
    Added a button in the "Appearance" tab of the preferences dialog to clear
    the list of recently opened files.

2010-08-13  JMB  Calculator backspace/clear fix, better Fremantle integer input

    Fixed a bug where clicking backspace or the clear button in the calculator
    dialog could result in incorrect display of grouping separators.  Enabled