@@ -89,7 +89,7 @@ public:
     void setViewColumnSequence(const QString &viewName,
                                const QStringList &colNames);
     void updateDataFormat();
-    QStringList getRow(int rowId, ImageUtils *utils=0, bool intSeparators=true);
+    QStringList getRow(int rowId, ImageUtils *utils=0);
 
     QString currentSorting();
     QStringList listSortings();
