@@ -192,12 +192,6 @@ void RowViewer::updateContent()
                 str += "<img src=\"img://icons/unchecked.png\">";
             }
         }
-        else if (type == INTEGER || type == SEQUENCE) {
-            str += Formatting::toLocalInt(values[i]);
-        }
-        else if (type == FLOAT || type == CALC) {
-            str += Formatting::toLocalDouble(values[i]);
-        }
         else if (type == IMAGE) {
             QString format = values[i];
             if (!format.isEmpty()) {
